<resources>
    <string name="app_name">Carbon Calculator</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete1">DELETE</string>
    <string name="nick_name">Nick Name</string>
    <string name="choose_transmission">Choose Transmission</string>
    <string name="choose_engine_displacement">Choose Engine Displacement</string>
    <string name="choose_year">Choose Year</string>
    <string name="choose_model">Choose Model</string>
    <string name="choose_make">Choose Make</string>
    <string name="add_route">Add Route</string>
    <string name="select_a_route">Select a route:</string>
    <string name="route_name">Name:</string>
    <string name="name">Name</string>
    <string name="city_segment_km">City Segment (km):</string>
    <string name="highway_segment_km">Highway Segment (km):</string>
    <string name="total_distance">Total Distance:</string>
    <string name="done">done</string>
    <string name="delete">delete</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="carbon_tracker">Carbon Tracker</string>
    <string name="kat_siu">Kat Siu</string>
    <string name="betty_huang">Betty Huang</string>
    <string name="candice_su">Candice Su</string>
    <string name="created_by">Created by:</string>
    <string name="vsevolod_lliushin">Vsevolod Iliushin</string>
    <string name="about_the_author">About the author:</string>
    <string name="app_information">App information:</string>
    <string name="source">Source:</string>
    <string name="https_s_media_cache_ak0_pinimg_com_564x_84_b7_fd_84b7fd33902b17b1672e849c956a431d_jpg">https://s-media-cache-ak0.pinimg.com/564x/84/b7/fd/84b7fd33902b17b1672e849c956a431d.jpg</string>
    <string name="https_maxcdn_icons8_com_share_icon_transport_suv1600_png">https://maxcdn.icons8.com/Share/icon/Transport//suv1600.png</string>
    <string name="http_downloadicons_net_sites_default_files_cloud_icon_62402_png">http://downloadicons.net/sites/default/files/cloud-icon-62402.png</string>
    <string name="https_openclipart_org_image_2400px_svg_to_png_190314_cloud_simple_png">https://openclipart.org/image/2400px/svg_to_png/190314/cloud-simple.png</string>
    <string name="car_name">Name:</string>
    <string name="car_make">Make:</string>
    <string name="car_model">Model:</string>
    <string name="car_year">Year:</string>
    <string name="car_transmission">Trans.:</string>
    <string name="car_engine_displacement">"Engine:  "</string>
    <string name="route_length">Length:</string>
    <string name="route_highway_length">"Highway:  "</string>
    <string name="route_city_length">City:</string>
    <string name="car_info">Car Info</string>
    <string name="route_info">Route Info</string>
    <string name="co2">CO2:</string>
    <string name="add_journey">Add Journey</string>
    <string name="display_carbon_footprint">Display Carbon Footprint</string>
    <string name="monthly_utility">Monthly Utility</string>
    <string name="transportaion_mode">Transportaion Mode</string>
    <string name="course_web">Course Web:</string>
    <string name="invoice_number">invoice number</string>
    <string name="choose_type">Choose Type</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="number_of_people">Number of People</string>
    <string name="start_date">From</string>
    <string name="end_date">To</string>
    <string name="electricity">Electricity</string>
    <string name="natural_gus">Natural Gas</string>
    <string name="electricity_hint">amount of GWh</string>
    <string name="natural_gas_hint">amount of GJ</string>
    <string name="wrong_invoice_number">Wrong Invoice Number</string>
    <string name="wrong_number_of_people">Wrong Number of People</string>
    <string name="invalid_amount">Please enter valid amount</string>
    <string name="your_footprint">Your Footprint</string>
    <string name="journey_list">Journey List</string>
    <string name="main_menu2">Main Menu</string>
    <string name="journey">Journey</string>
    <string name="date">Date</string>
    <string name="date_m_d_y">Date(M-D-Y):</string>
    <string name="bus_list">Bus List</string>
    <string name="skytrain_list">Skytrain List</string>
    <string name="bike_list">Bike List</string>
    <string name="tip">Tip!</string>
    <string name="next_tip">Next Tip</string>
    <string-array name="electric_tips">
        <item>Turn off lights when you leave the room to save energy.</item>
        <item>Make energy efficiency a primary consideration when choosing a new furnace, air conditioning unit, dishwasher, or refrigerator.</item>
        <item>Replace incandescent light bulbs with compact flourescent or LED ones to save energy.</item>
        <item>Consider adding solar panels to the roof of your home.</item>
        <item>Install motion sensors to control your lights, and unplug appliances when not in use.</item>
        <item>You can save on electricity by washing clothes in cold water.</item>
        <item>When you are cooking, use the microwave when you can. It uses much less energy than an electric oven.</item>
    </string-array>
    <string-array name="gas_tips">
        <item>Insulate and seal your home. Reduce drafts and air leaks with caulk, insulation, and weather stripping.</item>
        <item>Do not set your thermostat too high or low. Install a programmable model to turn off the heat or air conditioning when you’re not home</item>
        <item>Ventilation fans can suck out warm air. Turn them off when you do not need them.</item>
        <item>Support clean energy sources.  Whenever you can, advocate for clean alternatives to fossil fuels, such as wind or solar.</item>
        <item>Consider replacing old windows with high-efficiency double-pane windows with protective coatings that reflect heat back into your home during winter.</item>
        <item>Heating or cooling the whole house can be expensive. Where possible, shut doors to areas you are not using and only heat or cool the rooms you spend the most time in.</item>
        <item>Dress for the temperature. Layering clothes and wearing wool helps keep you warm in winter, and means you can turn your heater down.</item>
    </string-array>
    <string-array name="transport_tips">
        <item>When possible, walk or ride your bike in order to avoid carbon emissions completely.</item>
        <item>Carpooling and public transportation drastically reduce CO2 emissions by spreading them out over many riders.</item>
        <item>Consider switching to a low carbon vehicle. High mileage doesn/’t always mean low CO2 emissions. All vehicles have an estimated miles-per-gallon rating.</item>
        <item>Speeding and unnecessary acceleration reduce mileage by up to 33%, waste gas and money, and increase your carbon footprint.</item>
        <item>Being stuck in traffic wastes gas and unneccessarily creates CO2. Use traffic websites and apps and go a different way or wait.</item>
        <item>Consider alternatives to travelling, such as video-conferencing and telecommuting.</item>
        <item>Keep your vehicle well-maintained as that will minimize emissions.</item>
    </string-array>
    <string name="tip_start">You generate </string>
    <string name="tip_electric">kg of Co2 from electricity use.</string>
    <string name="tip_gas">kg of Co2 today from natural gas use.</string>
    <string name="tip_transport">kg of Co2 on average per day from traveling.</string>
    <string-array name="journey_notifications">
        <item>You have entered \s</item>
        <item>\s journeys today. Would you like to enter another?</item>
    </string-array>
    <string-array name="bill_notifications">
        <item>It has been \s</item>
        <item>\s days since you have entered a \s</item>
        <item>\s bill. Would you like to enter one now?</item>
    </string-array>
    <string name="electric_type">hydro</string>
    <string name="gas_type">gas</string>
    <string name="notification_title">Enter Carbon Tracker Data!</string>
    <string name="you_generate">"You generate "</string>
    <string name="kg_of_co2_from_electricity">"kg of Co2 from electricity use. "</string>
    <string name="ke_of_co2_today_from_natural_gas_use">"kg of Co2 today from natural gas use. "</string>
    <string name="ke_of_co2_on_average_per_day_from_traveling">"kg of Co2 on average per day from traveling. "</string>
    <string name="you_generate_1">"You generate "</string>
    <string name="you_generate_2">"You generate "</string>
    <string name="edit">Edit</string>
    <string name="delete2">Delete</string>
    <string name="delete3">Delete</string>
    <string name="amount">Amount:</string>
    <string name="car_list">Car List</string>
    <string name="nick_name2">Nick Name:</string>
    <string name="car_info2">Car Info</string>
    <string name="skytrain_name">Skytrain Name:</string>
    <string name="skytrain_info">Skytrain Info</string>
    <string name="destination_station">Destination Station:</string>
    <string name="starting_station">Starting Station:</string>
    <string name="date2">Date</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="bus_info">Bus Info</string>
    <string name="bus_name">Bus Name:</string>
    <string name="destination_stop">Destination Stop:</string>
    <string name="starting_stop">Starting Stop:</string>
    <string name="date3">Date</string>
    <string name="ok2">OK</string>
    <string name="cancel2">Cancel</string>
    <string name="bike_info">Bike info</string>
    <string name="name_bike">Name:</string>
    <string name="date_bike">Date:</string>
    <string name="distance_bike">Distance:</string>
    <string name="ok_bike">OK</string>
    <string name="car_list2">Car List</string>
    <string name="choose_icon_spinner">Choose Icon</string>
    <string name="this_app_is_created_by_group_lava_in_2017_n_version_1_1">This app is created by group Lava in 2017.\n Version: 1.1</string>
    <string name="source_link">https://cdn4.iconfinder.com/data/icons/pie-charts/100/pie-chart-12-512.png \n
    https://maxcdn.icons8.com/Share/icon/Programming//help1600.png \n
    https://cdn3.i confinder.com/data/icons/files-2/512/pie_chart_file-512.png \n
    https://cdn3.iconfinder.com/data/icons/flat-icons-big-sized/64/car-512.png \n
    https://d30y9cdsu7xlg0.cloudfront.net/png/54657-200.png \n
    https://cdn3.iconfinder.com/data/icons/car-icons-front-views/480/Sports_Car_Front_View-512.png \n
    https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Trash01-128.png \n
    https://cdn0.iconfinder.com/data/icons/typicons-2/24/arrow-back-512.png \n
    https://cdn2.iconfinder.com/data/icons/ios-tab-bar/25/Check_Circle-128.png \n
    https://cdn2.iconfinder.com/data/icons/ios-tab-bar/25/Cross_Cricle-128.png \n
    http://a3disenadora.site88.net/images/01.jpg \n
    https://cdn2.iconfinder.com/data/icons/bitsies/128/Info-128.png \n
    http://www.iconsplace.com/download/black-car-256.png \n
    http://www.iconsdb.com/icons/preview/deep-pink/car-xxl.png \n
    http://www.iconsdb.com/icons/preview/brown/car-xxl.png \n
    http://www.iconsdb.com/icons/preview/soylent-red/car-xxl.png \n
    https://github.com/facebook/shimmer-android \n
    https://github.com/google/gson \n</string>
    <string name="exit_menu">Exit</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="monthly_utility_menu">Monthly Utility</string>
    <string name="display_footprint_menu">Display Footprint</string>
    <string name="create_journey_list">Create Journey List</string>
    <string name="dsiplay_by_route">Dsiplay by Route</string>
    <string name="back">Back</string>
    <string name="display_by_mode">Display by mode</string>
    <string name="human_related_unit">Human Related Unit</string>
    <string name="regular_unit">Regular unit</string>
</resources>