<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_carbon_tracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background"
    tools:context="com.vsevolod.carbontracker.UI.AddCarActivity">

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/ok_button"
        android:background="@mipmap/okay_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinners"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/addCar_nickName"
        android:layout_alignParentStart="true">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_make"/>

            <TextView
                android:text="@string/choose_icon_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

        </TableRow>

        <TableRow>
            <Spinner
                android:id="@+id/make_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:layout_width="280px"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/addCar_nickName"
                android:id="@+id/spinner_icon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_model" />

        </TableRow>

        <TableRow>
              <Spinner
              android:id="@+id/model_spinner"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" />
          </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_year"/>
        </TableRow>

        <TableRow>
            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_engine_displacement"/>
        </TableRow>

        <TableRow>
            <Spinner
                android:id="@+id/engine_displacement_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_transmission"/>
        </TableRow>

        <TableRow>
            <Spinner
                android:id="@+id/transmission_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>



    </TableLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/addCar_nickName"
        android:textSize="14dp"
        android:hint="@string/nick_name"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/nick_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:id="@+id/textView2"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/cancel_button"
        android:background="@mipmap/cancel_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
