<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background"
    tools:context="com.vsevolod.carbontracker.UI.AboutScreen">

    <TextView
        android:text="@string/about_the_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_author"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/textInfo"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/textLink"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hyperlink"
        android:textSize = "16sp"
        android:textStyle="normal|bold"
        android:layout_marginStart="16dp"
        android:layout_alignBaseline="@+id/textLink"
        android:layout_alignBottom="@+id/textLink"
        android:layout_toEndOf="@+id/textLink" />

    <TextView
        android:text="@string/this_app_is_created_by_group_lava_in_2017_n_version_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#74b64d"
        android:id="@+id/text_author_detail"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        android:layout_below="@+id/txt_author"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/course_web"
        android:textColor="#74b64d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textLink"
        android:textStyle="normal|bold"
        android:textSize="16sp"
        android:layout_below="@+id/text_author_detail"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id = "@+id/myScroolView"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentStart="true">

    <TextView
        android:text="@string/source_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />
    </ScrollView>
</RelativeLayout>
