<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.vsevolod.carbontracker.UI.AddSkytrainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_skytrain_spinner"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentStart="true">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/skytrain_name"/>

            <Spinner
                android:id="@+id/skytrain_name_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/starting_station" />

            <Spinner
                android:id="@+id/starting_station_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/destination_station"/>

            <Spinner
                android:id="@+id/destination_station_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date2"
                android:id="@+id/a"
                android:textSize="16dp"
                android:textStyle="bold"  />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_skytrain_date"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:text="@string/skytrain_info"
        android:textStyle="bold"
        android:textSize="24dp"

        />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/add_skytrain_ok_btn"
        android:background="@mipmap/okay_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/add_skytrain_cancel_btn"
        android:background="@mipmap/cancel_cancel"
        android:layout_marginRight="20dp"
        android:layout_alignTop="@+id/add_skytrain_ok_btn"
        android:layout_alignStart="@+id/add_skytrain_spinner"
        android:layout_marginStart="11dp" />

</RelativeLayout>
