<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.vsevolod.carbontracker.UI.AddBikeActivity">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/bike_info"
        android:textSize="24dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/bike_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView19"
        android:layout_toEndOf="@+id/textView17"
        android:ems="10"
        android:hint="Please enter name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView19"
        android:layout_below="@+id/textView19"
        android:layout_marginTop="18dp"
        android:text="@string/date_bike"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_bike_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignStart="@+id/bike_name" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView20"
        android:layout_below="@+id/add_bike_date"
        android:layout_marginTop="11dp"
        android:text="@string/distance_bike"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_bike_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_bike_date"
        android:layout_below="@+id/add_bike_date"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="Please enter the distance"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="25dp"
        android:text="@string/name_bike"
        android:layout_below="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />

    <ImageButton
        android:id="@+id/bike_cancelbtn"
        android:layout_width="60dp"
        android:background="@mipmap/cancel_cancel"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/bike_okbtn"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:background="@mipmap/okay_save"
        android:id="@+id/bike_okbtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp" />


</RelativeLayout>
